fixed nav responsiveness on tablet

--- a/css/index.css
+++ b/css/index.css
@@ -169,7 +169,7 @@ header {
 /* Tablet General */
 @media (max-width: 800px) {
   .container {
-    width: 800px;
+    width: 100%;
   }
 
   header {
@@ -180,7 +180,7 @@ header {
 /* Phone General */
 @media (max-width: 500px) {
   .container {
-    width: 500px;
+    width: 100%;
     border: 1px solid blue;
   }
 }
@@ -219,14 +219,15 @@ nav a {
   }
 
   nav {
+    width: 80%;
     align-self: flex-start;
     font-size: 15px;
     margin-top: 40px;
-    margin-left: 3%;
+    margin-left: 7%;
   }
 
   nav a {
-    margin-right: 30%;
+    margin-right: 9%;
     color: black;
   }
 }
